force-app/main/default/objects/CTRSensitiveFieldList__mdt.object
<CustomObject>
    <fields>
        <fullName>BusinessUnit__c</fullName>
        <label>Business Unit</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>TOP</fullName>
                    <default>true</default>
                    <label>TOP</label>
                </value>
                <value>
                    <fullName>TX</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ObjectName__c</fullName>
        <label>ObjectName</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CTRRequestFormHeader__c</fullName>
                    <default>true</default>
                    <label>CTRRequestFormHeader__c</label>
                </value>
                <value>
                    <fullName>CTRRequestFormItem__c</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SensitiveField__c</fullName>
        <label>SensitiveField</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SupportType__c</fullName>
        <label>Support Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Customer</fullName>
                    <default>true</default>
                    <label>Customer</label>
                </value>
                <value>
                    <fullName>Supplier</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>CTRSensitiveFieldList</label>
</CustomObject>